[gd_scene load_steps=56 format=4 uid="uid://c8q6x3pmng0nx"]

[ext_resource type="Texture2D" uid="uid://cxram7f4ccl13" path="res://graphics/tiles/examples/ground.aseprite" id="1_ma1pn"]
[ext_resource type="TileSet" uid="uid://dbqfwepwmpejf" path="res://graphics/tiles/tile_set.tres" id="3_sqwkf"]
[ext_resource type="Script" path="res://scripts/Tilemap/TileMap.gd" id="4_iggaw"]
[ext_resource type="Script" path="res://scripts/Combat/CombatManager.gd" id="5_f5gbh"]
[ext_resource type="Script" path="res://scripts/UI/Combat/StartBattleButton.gd" id="5_ja3ef"]
[ext_resource type="Script" path="res://scripts/Tokens/TokenInventory.gd" id="5_v462x"]
[ext_resource type="Script" path="res://scripts/Enemies/EnemyManager.gd" id="7_044s7"]
[ext_resource type="Resource" uid="uid://083sj6g4ytev" path="res://resources/Tokens/big.tres" id="7_ije6g"]
[ext_resource type="Resource" uid="uid://dkgfls00lg17p" path="res://resources/Enemies/Basic.tres" id="8_nbnuu"]
[ext_resource type="Resource" uid="uid://rsp48jmlwixu" path="res://resources/Tokens/medium.tres" id="8_v6kqr"]
[ext_resource type="Script" path="res://scripts/Selection/SelectionManager.gd" id="9_d3y2r"]
[ext_resource type="Resource" uid="uid://da1pt6fugk8se" path="res://resources/Tokens/small.tres" id="9_joyem"]
[ext_resource type="Script" path="res://scripts/Combat/RollManager.gd" id="10_biw57"]
[ext_resource type="Script" path="res://scripts/Buildings/BuildingManager.gd" id="10_bp4um"]
[ext_resource type="Script" path="res://scripts/Enemies/Enemy.gd" id="10_ng17c"]
[ext_resource type="Script" path="res://scripts/Combat/EssenceManager.gd" id="11_d6jka"]
[ext_resource type="Resource" uid="uid://dxncjl8b0x8yr" path="res://resources/Enemies/Support.tres" id="12_55ijl"]
[ext_resource type="Script" path="res://scripts/Health/HealthManager.gd" id="13_7sb8f"]
[ext_resource type="PackedScene" uid="uid://bqnrfrlkcmgqh" path="res://scenes/UI/health.tscn" id="13_ixdpm"]
[ext_resource type="Resource" uid="uid://b0jmqnfplrtn7" path="res://resources/Enemies/Assasin.tres" id="13_jlq3s"]
[ext_resource type="Script" path="res://scripts/Enemies/PassiveManagergd.gd" id="14_fbt0a"]
[ext_resource type="Script" path="res://scripts/Cards/CardManager.gd" id="16_3ncu0"]
[ext_resource type="Script" path="res://scripts/Tokens/Token.gd" id="16_wv05o"]
[ext_resource type="PackedScene" uid="uid://nkrxrmnlyle8" path="res://scenes/UI/ability_pop_up.tscn" id="18_td7a0"]
[ext_resource type="Script" path="res://scripts/UI/Combat/TopButton.gd" id="19_5vo3e"]
[ext_resource type="Script" path="res://scripts/UI/Combat/Phase.gd" id="19_ak35g"]
[ext_resource type="Script" path="res://scripts/Obstacles/ObstacleManager.gd" id="19_u0o0i"]
[ext_resource type="Script" path="res://scripts/Obstacles/Obstacle.gd" id="20_lwv0x"]
[ext_resource type="Resource" uid="uid://br1b6psejuo83" path="res://resources/Cards/HomePoint.tres" id="20_tl8gv"]
[ext_resource type="Resource" uid="uid://dj6e4n700iu1m" path="res://resources/Obstacles/Box.tres" id="21_2u2fn"]
[ext_resource type="Script" path="res://scripts/Cards/card.gd" id="21_4gcxx"]
[ext_resource type="Texture2D" uid="uid://b0imspfnxv1ii" path="res://graphics/energy/bar.aseprite" id="21_p3m75"]
[ext_resource type="Script" path="res://scripts/UI/Combat/EnergyBar.gd" id="21_si6xu"]
[ext_resource type="Texture2D" uid="uid://b0l5bimdqfsxx" path="res://graphics/energy/energy_point.aseprite" id="22_gmerp"]
[ext_resource type="Resource" uid="uid://c6pqsqcdawxg8" path="res://resources/Obstacles/Mountain.tres" id="22_rysou"]
[ext_resource type="Resource" uid="uid://dgwgax7k48mw6" path="res://resources/Cards/Fight.tres" id="22_y3p1o"]
[ext_resource type="Resource" uid="uid://bwtenc1val03i" path="res://resources/Obstacles/Pillar.tres" id="23_7dy3w"]
[ext_resource type="Script" path="res://scripts/UI/Combat/InfoLabel.gd" id="28_51rc0"]
[ext_resource type="Script" path="res://scripts/UI/Combat/DrawPile.gd" id="28_pa4gw"]
[ext_resource type="Script" path="res://scripts/UI/Combat/EnemyIntents.gd" id="29_hdoyd"]
[ext_resource type="Texture2D" uid="uid://4xoprg4chgl7" path="res://graphics/icons/passive.aseprite" id="30_8xp64"]
[ext_resource type="Script" path="res://scripts/UI/Combat/Discard.gd" id="30_bh0kq"]
[ext_resource type="Texture2D" uid="uid://wgk7p7hdeg1x" path="res://graphics/cards/deck.aseprite" id="31_juuhc"]
[ext_resource type="Texture2D" uid="uid://3d1g031bkhxh" path="res://graphics/icons/attack.aseprite" id="31_mhi4q"]
[ext_resource type="Texture2D" uid="uid://d181bjtlvb6f" path="res://graphics/icons/no_intents.aseprite" id="32_ca3pw"]
[ext_resource type="Texture2D" uid="uid://chreydw1dvwrj" path="res://graphics/cards/discard.aseprite" id="32_oalup"]
[ext_resource type="Script" path="res://scripts/Cards/CardActions.gd" id="33_0knp2"]
[ext_resource type="PackedScene" uid="uid://datpadblhdkq7" path="res://scenes/UI/intent.tscn" id="33_4d7ky"]
[ext_resource type="Script" path="res://scripts/Cards/CustomActions/SecondStrike.gd" id="33_d6mmd"]
[ext_resource type="Script" path="res://scripts/Cards/CustomActions/Regeneration.gd" id="34_4l7ii"]
[ext_resource type="Script" path="res://scripts/Cards/CustomActions/Fight.gd" id="35_q7vey"]
[ext_resource type="Script" path="res://scripts/Cards/CustomActions/Bomb.gd" id="36_1qbwv"]
[ext_resource type="Script" path="res://scripts/Cards/CustomActions/Factory.gd" id="40_s783m"]
[ext_resource type="Script" path="res://scripts/Cards/CustomActions/MilitaryCamp.gd" id="41_1com6"]
[ext_resource type="Script" path="res://scripts/Cards/CustomActions/HomePoint.gd" id="42_wfycr"]

[node name="Main" type="Node2D"]

[node name="Ground2" type="Sprite2D" parent="."]
visible = false
z_index = 100
texture_filter = 1
position = Vector2(0, -16)
texture = ExtResource("1_ma1pn")

[node name="TileMap" type="Node2D" parent="." groups=["TileMap"]]
unique_name_in_owner = true
y_sort_enabled = true
texture_filter = 1
script = ExtResource("4_iggaw")

[node name="Underground" type="Node2D" parent="TileMap"]

[node name="Underground1" type="TileMapLayer" parent="TileMap/Underground"]
z_index = -1
y_sort_enabled = true
tile_map_data = PackedByteArray("AAD8/wQAAwACAAAAAAD9/wQAAwADAAAAAAD+/wQAAwACAAAAAAD//wQAAwADAAAAAAAAAAQAAwADAAAAAAABAAQAAwADAAAAAAACAAQAAwACAAAAAAADAAQAAwADAAAAAAADAAMAAwADAAAAAAADAAIAAwADAAAAAAADAAEAAwACAAAAAAADAAAAAwADAAAAAAADAP//AwADAAAAAAADAP7/AwACAAAAAAADAP3/AwADAAAAAAA=")
tile_set = ExtResource("3_sqwkf")
y_sort_origin = -1

[node name="Underground2" type="TileMapLayer" parent="TileMap/Underground"]
z_index = -2
y_sort_enabled = true
tile_map_data = PackedByteArray("AAAEAAQAAwADAAAAAAAEAAUAAwADAAAAAAAEAAEAAwADAAAAAAD//wUAAwADAAAAAAAAAAUAAwACAAAAAAABAAUAAwACAAAAAAACAAUAAwACAAAAAAADAAUAAwACAAAAAAD+/wUAAwACAAAAAAD9/wUAAwACAAAAAAAEAAMAAwACAAAAAAAEAAIAAwACAAAAAAAEAAAAAwACAAAAAAAEAP//AwACAAAAAAAEAP7/AwACAAAAAAA=")
tile_set = ExtResource("3_sqwkf")
y_sort_origin = -2

[node name="Underground3" type="TileMapLayer" parent="TileMap/Underground"]
z_index = -3
y_sort_enabled = true
tile_map_data = PackedByteArray("AAAFAAUAAwADAAAAAAAFAAEAAwADAAAAAAD+/wYAAwACAAAAAAD//wYAAwACAAAAAAAAAAYAAwACAAAAAAABAAYAAwACAAAAAAACAAYAAwACAAAAAAADAAYAAwACAAAAAAAEAAYAAwACAAAAAAAFAAYAAwACAAAAAAAFAAQAAwACAAAAAAAFAAMAAwACAAAAAAAFAAIAAwACAAAAAAAFAAAAAwACAAAAAAAFAP//AwACAAAAAAA=")
tile_set = ExtResource("3_sqwkf")
y_sort_origin = -3

[node name="Underground4" type="TileMapLayer" parent="TileMap/Underground"]
z_index = -4
y_sort_enabled = true
tile_map_data = PackedByteArray("AAD//wcAAwACAAAAAAAAAAcAAwACAAAAAAABAAcAAwACAAAAAAACAAcAAwACAAAAAAADAAcAAwACAAAAAAAEAAcAAwACAAAAAAAFAAcAAwACAAAAAAAGAAcAAwACAAAAAAAGAAYAAwACAAAAAAAGAAUAAwACAAAAAAAGAAQAAwACAAAAAAAGAAMAAwACAAAAAAAGAAIAAwACAAAAAAAGAAEAAwACAAAAAAAGAAAAAwACAAAAAAA=")
tile_set = ExtResource("3_sqwkf")
y_sort_origin = -4

[node name="Underground5" type="TileMapLayer" parent="TileMap/Underground"]
z_index = -5
y_sort_enabled = true
position = Vector2(0, 1)
tile_map_data = PackedByteArray("AAAAAAgAAwACAAAAAAABAAgAAwACAAAAAAACAAgAAwACAAAAAAADAAgAAwACAAAAAAAEAAgAAwACAAAAAAAFAAgAAwACAAAAAAAGAAgAAwACAAAAAAAHAAgAAwACAAAAAAAHAAcAAwACAAAAAAAHAAYAAwACAAAAAAAHAAUAAwACAAAAAAAHAAQAAwACAAAAAAAHAAMAAwACAAAAAAAHAAIAAwACAAAAAAAHAAEAAwACAAAAAAA=")
tile_set = ExtResource("3_sqwkf")
y_sort_origin = -5

[node name="Underground6" type="TileMapLayer" parent="TileMap/Underground"]
z_index = -6
y_sort_enabled = true
position = Vector2(0, 1)
tile_map_data = PackedByteArray("AAABAAkAAwACAAAAAAACAAkAAwACAAAAAAADAAkAAwACAAAAAAAEAAkAAwACAAAAAAAFAAkAAwACAAAAAAAGAAkAAwACAAAAAAAHAAkAAwACAAAAAAAIAAIAAwACAAAAAAAIAAMAAwACAAAAAAAIAAQAAwACAAAAAAAIAAUAAwACAAAAAAAIAAYAAwACAAAAAAAIAAcAAwACAAAAAAAIAAgAAwACAAAAAAAIAAkAAwACAAAAAAA=")
tile_set = ExtResource("3_sqwkf")
y_sort_origin = -6

[node name="Underground7" type="TileMapLayer" parent="TileMap/Underground"]
z_index = -7
y_sort_enabled = true
position = Vector2(0, 1)
tile_map_data = PackedByteArray("AAACAAoAAwACAAAAAAADAAoAAwACAAAAAAAEAAoAAwACAAAAAAAFAAoAAwACAAAAAAAGAAoAAwACAAAAAAAHAAoAAwACAAAAAAAIAAoAAwACAAAAAAAJAAMAAwACAAAAAAAJAAQAAwACAAAAAAAJAAUAAwACAAAAAAAJAAYAAwACAAAAAAAJAAcAAwACAAAAAAAJAAgAAwACAAAAAAAJAAkAAwACAAAAAAAJAAoAAwACAAAAAAA=")
tile_set = ExtResource("3_sqwkf")
y_sort_origin = -7

[node name="Ground" type="TileMapLayer" parent="TileMap"]
y_sort_enabled = true
texture_filter = 1
use_parent_material = true
tile_map_data = PackedByteArray("AAD//wAAAwAEAAUAAAD/////AwAEAAQAAAD//wEAAwAEAAYAAAAAAAAAAwAFAAUAAAAAAAEAAwAFAAYAAAAAAP//AwAFAAQAAAD+////AwADAAQAAAD+/wAAAwADAAUAAAD+/wEAAwADAAYAAAABAP//AwAGAAQAAAABAAEAAwAGAAYAAAABAAAAAwAGAAUAAAD+/wIAAwADAAcAAAD//wIAAwAEAAcAAAAAAAIAAwAFAAcAAAABAAIAAwAGAAcAAAD8//3/AwABAAIAAAD8//7/AwABAAMAAAD8////AwABAAQAAAD8/wAAAwABAAUAAAD9/wAAAwACAAUAAAD9/wEAAwACAAYAAAD9/wIAAwACAAcAAAD9//7/AwACAAMAAAD9//3/AwACAAIAAAD9////AwACAAQAAAD+//7/AwADAAMAAAD+//3/AwADAAIAAAD///7/AwAEAAMAAAD///3/AwAEAAIAAAAAAP3/AwAFAAIAAAABAP3/AwAGAAIAAAABAP7/AwAGAAMAAAAAAP7/AwAFAAMAAAD8/wEAAwABAAYAAAD8/wIAAwABAAcAAAACAP7/AwAHAAMAAAACAP3/AwAHAAIAAAACAP//AwAHAAQAAAACAAAAAwAHAAUAAAACAAMAAwAHAAgAAAACAAIAAwAHAAcAAAACAAEAAwAHAAYAAAABAAMAAwAGAAgAAAAAAAMAAwAFAAgAAAD//wMAAwAEAAgAAAD9/wMAAwACAAgAAAD8/wMAAwABAAgAAAD+/wMAAwADAAgAAAD7//z/AwAAAAEAAAD8//z/AwABAAEAAAD9//z/AwACAAEAAAD+//z/AwADAAEAAAD///z/AwAEAAEAAAAAAPz/AwAFAAEAAAABAPz/AwAGAAEAAAACAPz/AwAHAAEAAAD7//3/AwAAAAIAAAD7//7/AwAAAAMAAAD7////AwAAAAQAAAD7/wAAAwAAAAUAAAD7/wEAAwAAAAYAAAD7/wIAAwAAAAcAAAD7/wMAAwAAAAgAAAA=")
tile_set = ExtResource("3_sqwkf")

[node name="Cover 1" type="TileMapLayer" parent="TileMap"]
z_index = 1
y_sort_enabled = true
use_parent_material = true
tile_set = ExtResource("3_sqwkf")
y_sort_origin = 1

[node name="GroundIndicator" type="TileMapLayer" parent="TileMap"]
z_index = 1
y_sort_enabled = true
use_parent_material = true
tile_set = ExtResource("3_sqwkf")

[node name="Cover1Indicator" type="TileMapLayer" parent="TileMap"]
z_index = 2
y_sort_enabled = true
use_parent_material = true
tile_set = ExtResource("3_sqwkf")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, 22)
zoom = Vector2(1.5, 1.5)

[node name="CombatManager" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("5_f5gbh")

[node name="SelectionManager" type="Node" parent="." groups=["SelectionManager"]]
unique_name_in_owner = true
script = ExtResource("9_d3y2r")

[node name="EnemyManager" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("7_044s7")
testing_enemies = Array[ExtResource("10_ng17c")]([ExtResource("13_jlq3s"), ExtResource("8_nbnuu"), ExtResource("12_55ijl")])

[node name="PassiveManager" type="Node" parent="EnemyManager"]
unique_name_in_owner = true
script = ExtResource("14_fbt0a")

[node name="BuildingManager" type="Node" parent="." groups=["BuildingManager"]]
unique_name_in_owner = true
script = ExtResource("10_bp4um")
ability_pop_up = ExtResource("18_td7a0")

[node name="RollManager" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("10_biw57")

[node name="EssenceManager" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("11_d6jka")

[node name="ObstacleManager" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("19_u0o0i")
test_obstacles = Array[ExtResource("20_lwv0x")]([ExtResource("21_2u2fn"), ExtResource("22_rysou"), ExtResource("23_7dy3w")])

[node name="Inventory" type="Node" parent="."]

[node name="Tokens" type="Node" parent="Inventory"]
unique_name_in_owner = true
script = ExtResource("5_v462x")
tokens = Array[ExtResource("16_wv05o")]([ExtResource("7_ije6g"), ExtResource("8_v6kqr"), ExtResource("9_joyem"), ExtResource("7_ije6g")])

[node name="Cards" type="Node" parent="Inventory"]
unique_name_in_owner = true
script = ExtResource("16_3ncu0")
testing_deck = Array[ExtResource("21_4gcxx")]([ExtResource("22_y3p1o"), ExtResource("22_y3p1o"), ExtResource("22_y3p1o"), ExtResource("20_tl8gv"), ExtResource("20_tl8gv"), ExtResource("20_tl8gv")])

[node name="Healths" type="Control" parent="."]
unique_name_in_owner = true
z_index = 100
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("13_7sb8f")
health_label = ExtResource("13_ixdpm")
offset = Vector2(-5, 15)

[node name="EnemyIntents" type="Control" parent="."]
unique_name_in_owner = true
z_index = 101
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("29_hdoyd")
offset = Vector2(-5, 5)
passive_icon = ExtResource("30_8xp64")
attack_icon = ExtResource("31_mhi4q")
no_intents_icon = ExtResource("32_ca3pw")
intent_control = ExtResource("33_4d7ky")

[node name="CanvasLayer" type="CanvasLayer" parent="." groups=["Canvas"]]
unique_name_in_owner = true

[node name="BottomButton" type="Button" parent="CanvasLayer"]
unique_name_in_owner = true
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -184.0
offset_top = -94.0
offset_right = -16.0
offset_bottom = -18.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 49
text = "Start"
script = ExtResource("5_ja3ef")

[node name="TopButton" type="Button" parent="CanvasLayer"]
unique_name_in_owner = true
visible = false
texture_filter = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -180.0
offset_top = 19.0
offset_right = -25.0
offset_bottom = 89.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 41
text = "Attack"
script = ExtResource("19_5vo3e")

[node name="InfoLabel" type="Label" parent="CanvasLayer"]
unique_name_in_owner = true
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 50
script = ExtResource("28_51rc0")

[node name="Phase" type="Label" parent="CanvasLayer"]
unique_name_in_owner = true
texture_filter = 1
offset_right = 144.0
offset_bottom = 44.0
theme_override_font_sizes/font_size = 21
text = "Current Phase"
script = ExtResource("19_ak35g")

[node name="EnergyBar" type="Control" parent="CanvasLayer"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 3
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -151.0
offset_top = -207.0
offset_right = -51.0
offset_bottom = 93.0
grow_horizontal = 0
grow_vertical = 2
script = ExtResource("21_si6xu")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/EnergyBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0
alignment = 2

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/EnergyBar/VBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
texture = ExtResource("22_gmerp")

[node name="TextureRect2" type="TextureRect" parent="CanvasLayer/EnergyBar/VBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
texture = ExtResource("22_gmerp")

[node name="TextureRect3" type="TextureRect" parent="CanvasLayer/EnergyBar/VBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
texture = ExtResource("22_gmerp")

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/EnergyBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("21_p3m75")

[node name="Label" type="Label" parent="CanvasLayer/EnergyBar"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -43.0
offset_top = -11.0
offset_right = 43.0
offset_bottom = 66.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 56
text = "3/3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DrawPile" type="Control" parent="CanvasLayer"]
texture_filter = 1
layout_mode = 3
anchor_top = 0.704
anchor_right = 0.111
anchor_bottom = 1.0
offset_top = -0.192047
offset_right = 0.127991
grow_vertical = 0
script = ExtResource("28_pa4gw")

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/DrawPile"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("31_juuhc")

[node name="DeckCount" type="Label" parent="CanvasLayer/DrawPile"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -56.0
offset_top = 16.0
offset_right = -12.0
offset_bottom = 75.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 26
text = "10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Discard" type="Control" parent="CanvasLayer"]
texture_filter = 1
layout_mode = 3
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 26.0
offset_top = 99.0
offset_right = 70.0
offset_bottom = 143.0
grow_vertical = 2
script = ExtResource("30_bh0kq")

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Discard"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("32_oalup")

[node name="DiscardCount" type="Label" parent="CanvasLayer/Discard"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 26
text = "10
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Hand" type="HBoxContainer" parent="CanvasLayer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -376.0
offset_top = -148.0
offset_right = 364.0
offset_bottom = 55.9991
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = -30
alignment = 1

[node name="CardActions" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("33_0knp2")

[node name="Regeneration" type="Node" parent="CardActions"]
script = ExtResource("34_4l7ii")
card_name = &"Regeneration"

[node name="Fight" type="Node" parent="CardActions"]
script = ExtResource("35_q7vey")
card_name = &"Fight"

[node name="SecondStrike" type="Node" parent="CardActions"]
script = ExtResource("33_d6mmd")
card_name = &"Second Strike"

[node name="Bomb" type="Node" parent="CardActions"]
script = ExtResource("36_1qbwv")
card_name = &"Bomb"

[node name="Factory" type="Node" parent="CardActions"]
script = ExtResource("40_s783m")
card_name = &"Factory"

[node name="MilitaryCamp" type="Node" parent="CardActions"]
script = ExtResource("41_1com6")
card_name = &"Military Camp"

[node name="HomePoint" type="Node" parent="CardActions"]
script = ExtResource("42_wfycr")
card_name = &"Home Point"

[connection signal="placing_tokens" from="CombatManager" to="EnemyManager" method="_on_combat_manager_placing_tokens"]
[connection signal="placing_tokens" from="CombatManager" to="ObstacleManager" method="_on_combat_manager_placing_tokens"]
[connection signal="placing_tokens" from="CombatManager" to="Inventory/Tokens" method="_on_placing_tokens"]
[connection signal="start_player_turn" from="CombatManager" to="BuildingManager" method="start_player_turn"]
[connection signal="start_player_turn" from="CombatManager" to="CanvasLayer/BottomButton" method="_on_combat_manager_start_player_turn"]
[connection signal="changed_action_type" from="SelectionManager" to="CanvasLayer/InfoLabel" method="changed_action_type"]
[connection signal="pressed" from="CanvasLayer/BottomButton" to="CanvasLayer/BottomButton" method="_on_pressed"]
[connection signal="attacked" from="CanvasLayer/TopButton" to="SelectionManager" method="top_button_pressed"]
[connection signal="pressed" from="CanvasLayer/TopButton" to="CanvasLayer/TopButton" method="_on_pressed"]
[connection signal="gui_input" from="CanvasLayer/DrawPile/TextureRect" to="CanvasLayer/DrawPile" method="_on_texture_rect_gui_input"]
[connection signal="gui_input" from="CanvasLayer/Discard/TextureRect" to="CanvasLayer/Discard" method="_on_texture_rect_gui_input"]
